tests/samples/failing/02.mlang
fn requires_i32 |n: i32| n : (i32) -> i32;

let result requires_i32("this is not an integer");
